2022-08-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: corrected the backup size (current backup & total size)

2021-11-15  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Error message if Full Disk Access is required
        * tmstatus.sh: General cleanup with ShellCheck
        * tmstatus.sh(status): Fixed the processing of the remaining time

2021-10-26  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Fix the processing of tmutils listbackups and latestbackup

2021-04-20  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Verifying progress

2021-02-16  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Better phase naming
	* tmstatus.sh: Better info when performing backup verification

2018-02-20  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Fixed the parsing of 100% completion and negative estimated duration

2018-02-11  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Handling first backup

2018-02-08  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: better phase descriptions

2018-01-29  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: better phase description

2018-01-26  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh (format_days_ago): better description for <24h

2018-01-25  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Corrected a bug in the phase detection. Prints the time remaining only when existing
	* tmstatus.sh: Shows only the percentage if > 1%
	* tmstatus.sh: Consolidated time span computation
	* tmstatus.sh: Corrected time span computation